	PR inline-asm/39059 	* c-parser.c (c_parser_postfix_expression): If fixed point is not 	supported, don't accept FIXED_CSTs. 	* c-decl.c (finish_declspecs): Error if fixed point is not supported 	and _Sat is used without _Fract/_Accum.  Set specs->type to 	integer_type_node for cts_fract/cts_accum if fixed point is not 	supported.

* parser.c (cp_parser_primary_expression): Reject FIXED_CSTs.

	* gcc.dg/nofixed-point-2.c: New test.
	* g++.dg/ext/fixed1.C: Adjust expected diagnostics.
	* g++.dg/ext/fixed2.C: Likewise.
	* g++.dg/other/error25.C: Likewise.
	* g++.dg/lookup/crash7.C: Likewise.
	* g++.dg/cpp0x/decltype-38655.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143900 138bc75d-0d04-0410-961f-82ee72b054a4