gcc/testsuite/g++.dg/cpp0x/decltype-38655.C
@@ -1,4 +1,4 @@
 // PR c++/38655
 // { dg-options "" }
 
-__decltype(0r)* p = 1; // { dg-error "unnamed-fixed" }
+__decltype(0r)* p = 1; // { dg-error "not supported|invalid" }
